--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
@@ -86,6 +87,17 @@ dependencies {
 
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
 
+    //circle image view
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    //firebase phone number auth
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.firebaseui:firebase-ui-auth:2.4.0'
+
+    //android telephone mask lib
+     implementation 'com.github.santalu:mask-edittext:1.1.1'
+
 }
-apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
