--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.hp.timeapp">
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <!-- <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
     <!-- <uses-permission android:name="android.permission.READ_PROFILE" /> -->
@@ -23,11 +28,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.SelectActivity">
+        <activity
+            android:name=".auth.PhoneLoginActivity"
+            android:label="@string/title_activity_phone_login"/>
 
-        </activity>
 
-
+        <activity android:name=".ui.SelectActivity"/>
         <activity
             android:name=".ui.SingleActivity"
             android:label="@string/title_activity_single"
@@ -42,7 +48,6 @@
 
         <activity android:name=".ui.CertainActivity" />
         <activity android:name=".googleMaps.MapActivity" />
-
         <activity
             android:name=".ui.SplashActivity"
             android:label="@string/app_name"
@@ -53,7 +58,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
