--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.hp.timeapp"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -13,7 +13,7 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
-        debug{}
+        debug {}
 
         release {
             minifyEnabled false
@@ -95,9 +95,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.firebaseui:firebase-ui-auth:2.4.0'
 
-    //android telephone mask lib
-     implementation 'com.github.santalu:mask-edittext:1.1.1'
-
+    implementation 'com.github.f0ris.sweetalert:library:1.5.1'
+    implementation 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
 apply plugin: 'com.google.gms.google-services'
-
