--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.hp.timeapp">
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.READ_CONTACTS" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
     <!-- <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
     <!-- <uses-permission android:name="android.permission.READ_PROFILE" /> -->
     <!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
@@ -27,13 +25,17 @@
         android:roundIcon="@mipmap/ic_launcher_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:icon">
+        <activity
+            android:name=".ui.ProfileActivity"
+            android:label="@string/title_activity_profile"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".auth.NumberActivity" />
         <activity
             android:name=".auth.PhoneLoginActivity"
-            android:label="@string/title_activity_phone_login"/>
-
-
-        <activity android:name=".ui.SelectActivity"/>
+            android:label="@string/title_activity_phone_login" />
+        <activity android:name=".ui.SelectActivity" />
         <activity
             android:name=".ui.SingleActivity"
             android:label="@string/title_activity_single"
@@ -68,6 +70,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".auth.LoginActivity" />
+        <activity android:name=".auth.NameActivity" />
         <activity android:name=".auth.RegistrationActivity" />
         <activity
             android:name=".settings.SettingsActivity"
