--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,5 +98,8 @@ dependencies {
     implementation 'com.github.f0ris.sweetalert:library:1.5.1'
     implementation 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+
+    implementation 'com.synnapps:carouselview:0.1.5'
+    implementation 'com.github.zcweng:switch-button:0.0.3@aar'
 }
 apply plugin: 'com.google.gms.google-services'
